--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bible-assistant-next",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": ">=25.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
