--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-amplify": "^6.15.9",
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
