--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@stripe/stripe-js": "^8.6.0",
+    "@tanstack/react-query": "^5.90.20",
     "aws-amplify": "^6.15.9",
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
