--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@stripe/stripe-js": "^8.6.0",
     "@tanstack/react-query": "^5.90.20",
     "aws-amplify": "^6.15.9",
+    "aws-jwt-verify": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.1.0",
@@ -38,6 +41,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/pino": "^7.0.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.18",
